fix padding on small screen @ first page

--- a/css/first-pages.css
+++ b/css/first-pages.css
@@ -48,7 +48,7 @@
 
 
   main {
-    margin-left: var(--first-page-navbar-width);
+    margin: 0 0 0 var(--first-page-navbar-width);
     padding: 5rem;
   }
 
@@ -98,7 +98,7 @@
   }
 
   main {
-    margin-bottom: 5rem;
-    padding: 1rem;
+    margin: 0 0 5rem 0;
+    /*padding: 1rem;*/
   }
 }
